add main design

--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -22,16 +22,16 @@
             <setting name="PLC_PORT" serializeAs="String">
                 <value>1997</value>
             </setting>
-            <setting name="PLC_BIT_GO_TOP" serializeAs="String">
+            <setting name="PLC_BIT_GO_UP_TOP" serializeAs="String">
                 <value />
             </setting>
-            <setting name="PLC_BIT_GO_BOT" serializeAs="String">
+            <setting name="PLC_BIT_GO_DOWN_TOP" serializeAs="String">
                 <value />
             </setting>
-            <setting name="PLC_BIT_GO_LEFT" serializeAs="String">
+            <setting name="PLC_BIT_GO_LEFT_TOP" serializeAs="String">
                 <value />
             </setting>
-            <setting name="PLC_BIT_GO_RIGHT" serializeAs="String">
+            <setting name="PLC_BIT_GO_RIGHT_TOP" serializeAs="String">
                 <value />
             </setting>
             <setting name="PLC_BIT_GO_HOME" serializeAs="String">
@@ -96,6 +96,27 @@
             </setting>
             <setting name="LIGHT_COM" serializeAs="String">
                 <value>COM10</value>
+            </setting>
+            <setting name="PLC_BIT_GO_UP_BOT" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_BIT_GO_DOWN_BOT" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_BIT_GO_LEFT_BOT" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_BIT_GO_RIGHT_BOT" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_BIT_GO_UP_CONVEYOR" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_BIT_GO_DOWN_CONVEYOR" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PLC_REG_CONVEYOR" serializeAs="String">
+                <value />
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
