--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
@@ -159,6 +159,12 @@
                 serializeAs="String">
                 <value>M120</value>
             </setting>
+            <setting name="PULSE_PER_MM" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="RUNNING_MODE" serializeAs="String">
+                <value>TEST</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
