add auto reder fov

--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -10,11 +10,11 @@
     </startup>
     <userSettings>
         <SPI_AOI.Properties.Settings>
-            <setting name="DPI" serializeAs="String">
-                <value>791</value>
+            <setting name="DPI_DEFAULT" serializeAs="String">
+                <value>790</value>
             </setting>
             <setting name="FOV" serializeAs="String">
-                <value>1600, 1600</value>
+                <value>1400, 1200</value>
             </setting>
             <setting name="PLC_IP" serializeAs="String">
                 <value>192.168.3.100</value>
@@ -92,7 +92,7 @@
                 <value />
             </setting>
             <setting name="LIGHT_COM" serializeAs="String">
-                <value>COM4</value>
+                <value>COM10</value>
             </setting>
             <setting name="PLC_BIT_GO_UP_BOT" serializeAs="String">
                 <value>M321</value>
@@ -133,7 +133,7 @@
             <setting name="PLC_BIT_WRITE_COORDINATES_FINISH_CONVEYOR" serializeAs="String">
                 <value>M110</value>
             </setting>
-            <setting name="AUTOSCAN_COM" serializeAs="String">
+            <setting name="SCANER_COM" serializeAs="String">
                 <value>COM4</value>
             </setting>
             <setting name="PLC_REG_PASSWORD" serializeAs="String">
@@ -198,8 +198,59 @@
             <setting name="PLC_REG_Y_BOT_READ" serializeAs="String">
                 <value>D1016</value>
             </setting>
-            <setting name="Setting" serializeAs="String">
-                <value />
+            <setting name="LIGHT_DEFAULT_INTENSITY_CH1" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LIGHT_DEFAULT_INTENSITY_CH2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LIGHT_DEFAULT_INTENSITY_CH3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LIGHT_DEFAULT_INTENSITY_CH4" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="USER_LOGIN" serializeAs="String">
+                <value>Admin</value>
+            </setting>
+            <setting name="DPI_SCALE" serializeAs="String">
+                <value>3.636363636363</value>
+            </setting>
+            <setting name="THICKNESS_DEFAULT" serializeAs="String">
+                <value>1.2</value>
+            </setting>
+            <setting name="PULSE_X_PER_PIXEL_DEFAULT" serializeAs="String">
+                <value>3.2</value>
+            </setting>
+            <setting name="PULSE_Y_PER_PIXEL_DEFAULT" serializeAs="String">
+                <value>3.2</value>
+            </setting>
+            <setting name="SCALE_PULSE_X" serializeAs="String">
+                <value>0.02</value>
+            </setting>
+            <setting name="SCALE_PULSE_Y" serializeAs="String">
+                <value>0.02</value>
+            </setting>
+            <setting name="CAMERA_X_AXIS_ANGLE" serializeAs="String">
+                <value>0.45</value>
+            </setting>
+            <setting name="XY_AXIS_ANGLE" serializeAs="String">
+                <value>0.02</value>
+            </setting>
+            <setting name="PLC_LIMIT_X_TOP" serializeAs="String">
+                <value>39900</value>
+            </setting>
+            <setting name="PLC_LIMIT_Y_TOP" serializeAs="String">
+                <value>39900</value>
+            </setting>
+            <setting name="PLC_LIMIT_X_BOT" serializeAs="String">
+                <value>39900</value>
+            </setting>
+            <setting name="PLC_LIMIT_Y_BOT" serializeAs="String">
+                <value>39900</value>
+            </setting>
+            <setting name="PLC_LIMIT_CONVEYOR" serializeAs="String">
+                <value>2147483</value>
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
