--- a/SPI-AOI/Properties/Settings.settings
+++ b/SPI-AOI/Properties/Settings.settings
@@ -2,11 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SPI_AOI.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="DPI" Type="System.Single" Scope="User">
-      <Value Profile="(Default)">791</Value>
+    <Setting Name="DPI_DEFAULT" Type="System.Single" Scope="User">
+      <Value Profile="(Default)">790</Value>
     </Setting>
     <Setting Name="FOV" Type="System.Drawing.Size" Scope="User">
-      <Value Profile="(Default)">1600, 1600</Value>
+      <Value Profile="(Default)">1400, 1200</Value>
     </Setting>
     <Setting Name="PLC_IP" Type="System.String" Scope="User">
       <Value Profile="(Default)">192.168.3.100</Value>
@@ -84,7 +84,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="LIGHT_COM" Type="System.String" Scope="User">
-      <Value Profile="(Default)">COM4</Value>
+      <Value Profile="(Default)">COM10</Value>
     </Setting>
     <Setting Name="PLC_BIT_GO_UP_BOT" Type="System.String" Scope="User">
       <Value Profile="(Default)">M321</Value>
@@ -125,7 +125,7 @@
     <Setting Name="PLC_BIT_WRITE_COORDINATES_FINISH_CONVEYOR" Type="System.String" Scope="User">
       <Value Profile="(Default)">M110</Value>
     </Setting>
-    <Setting Name="AUTOSCAN_COM" Type="System.String" Scope="User">
+    <Setting Name="SCANER_COM" Type="System.String" Scope="User">
       <Value Profile="(Default)">COM4</Value>
     </Setting>
     <Setting Name="PLC_REG_PASSWORD" Type="System.String" Scope="User">
@@ -188,8 +188,59 @@
     <Setting Name="PLC_REG_Y_BOT_READ" Type="System.String" Scope="User">
       <Value Profile="(Default)">D1016</Value>
     </Setting>
-    <Setting Name="Setting" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="LIGHT_DEFAULT_INTENSITY_CH1" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="LIGHT_DEFAULT_INTENSITY_CH2" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="LIGHT_DEFAULT_INTENSITY_CH3" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="LIGHT_DEFAULT_INTENSITY_CH4" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="USER_LOGIN" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Admin</Value>
+    </Setting>
+    <Setting Name="DPI_SCALE" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">3.636363636363</Value>
+    </Setting>
+    <Setting Name="THICKNESS_DEFAULT" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1.2</Value>
+    </Setting>
+    <Setting Name="PULSE_X_PER_PIXEL_DEFAULT" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">3.2</Value>
+    </Setting>
+    <Setting Name="PULSE_Y_PER_PIXEL_DEFAULT" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">3.2</Value>
+    </Setting>
+    <Setting Name="SCALE_PULSE_X" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0.02</Value>
+    </Setting>
+    <Setting Name="SCALE_PULSE_Y" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0.02</Value>
+    </Setting>
+    <Setting Name="CAMERA_X_AXIS_ANGLE" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0.45</Value>
+    </Setting>
+    <Setting Name="XY_AXIS_ANGLE" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0.02</Value>
+    </Setting>
+    <Setting Name="PLC_LIMIT_X_TOP" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">39900</Value>
+    </Setting>
+    <Setting Name="PLC_LIMIT_Y_TOP" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">39900</Value>
+    </Setting>
+    <Setting Name="PLC_LIMIT_X_BOT" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">39900</Value>
+    </Setting>
+    <Setting Name="PLC_LIMIT_Y_BOT" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">39900</Value>
+    </Setting>
+    <Setting Name="PLC_LIMIT_CONVEYOR" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2147483</Value>
     </Setting>
   </Settings>
 </SettingsFile>
