--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -189,6 +189,9 @@
     <Compile Include="Views\ModelManagement\AutoAdjustWindow.xaml.cs">
       <DependentUpon>AutoAdjustWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ModelManagement\AutoLinkPadWindow.xaml.cs">
+      <DependentUpon>AutoLinkPadWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModelManagement\DashBoard.xaml.cs">
       <DependentUpon>DashBoard.xaml</DependentUpon>
     </Compile>
@@ -239,6 +242,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\ModelManagement\AutoAdjustWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ModelManagement\AutoLinkPadWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -309,6 +316,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Icons\x_red2.png" />
     <EmbeddedResource Include="Views\MainConfigWindow\PLCBitconfigForm.resx">
       <DependentUpon>PLCBitconfigForm.cs</DependentUpon>
     </EmbeddedResource>
