--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
@@ -77,19 +77,16 @@
                 <value>M3</value>
             </setting>
             <setting name="PLC_BIT_MACHINE_STATUS" serializeAs="String">
-                <value />
+                <value>M163</value>
             </setting>
             <setting name="PLC_BIT_HAS_PRODUCT_BOT" serializeAs="String">
                 <value>M105</value>
             </setting>
-            <setting name="PLC_BIT_CONTROL_RUN" serializeAs="String">
-                <value />
-            </setting>
             <setting name="PLC_BIT_READ_QRCODE_FAIL" serializeAs="String">
-                <value />
+                <value>M502</value>
             </setting>
             <setting name="PLC_BIT_CAPTURE_FAIL" serializeAs="String">
-                <value />
+                <value>M500</value>
             </setting>
             <setting name="LIGHT_COM" serializeAs="String">
                 <value>COM4</value>
@@ -160,7 +157,7 @@
                 <value>M120</value>
             </setting>
             <setting name="RUNNING_MODE" serializeAs="String">
-                <value>TEST</value>
+                <value>1</value>
             </setting>
             <setting name="PLC_REG_CONVEYOR_READ" serializeAs="String">
                 <value>D1010</value>
@@ -254,6 +251,42 @@
             </setting>
             <setting name="PLC_REG_PENAL_POSITION" serializeAs="String">
                 <value>D292</value>
+            </setting>
+            <setting name="CAMERA_MATRIX_FILE" serializeAs="String">
+                <value>D:\Heal\Projects\SPI-AOI\Calibrate\matrix.txt</value>
+            </setting>
+            <setting name="CAMERA_DISTCOEFFS_FILE" serializeAs="String">
+                <value>D:\Heal\Projects\SPI-AOI\Calibrate\dis.txt</value>
+            </setting>
+            <setting name="IMAGE_SIZE" serializeAs="String">
+                <value>2448, 2048</value>
+            </setting>
+            <setting name="SAVE_IMAGE_PATH" serializeAs="String">
+                <value>D:\Save</value>
+            </setting>
+            <setting name="SAVE_IMAGE_HOURS" serializeAs="String">
+                <value>120</value>
+            </setting>
+            <setting name="LIGHT_MODE" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="CAMERA_GAIN" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="RUN_X_TOP_SPEED" serializeAs="String">
+                <value>200000</value>
+            </setting>
+            <setting name="RUN_Y_TOP_SPEED" serializeAs="String">
+                <value>200000</value>
+            </setting>
+            <setting name="RUN_CONVEYOR_SPEED" serializeAs="String">
+                <value>30000</value>
+            </setting>
+            <setting name="RUN_Y_BOT_SPEED" serializeAs="String">
+                <value>50000</value>
+            </setting>
+            <setting name="RUN_X_BOT_SPEED" serializeAs="String">
+                <value>50000</value>
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
