add light source ctl form

--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -253,10 +253,10 @@
                 <value>D292</value>
             </setting>
             <setting name="CAMERA_MATRIX_FILE" serializeAs="String">
-                <value>D:\Heal\Projects\SPI-AOI\Calibrate\matrix.txt</value>
+                <value>..\..\..\..\Calibrate\matrix.txt</value>
             </setting>
             <setting name="CAMERA_DISTCOEFFS_FILE" serializeAs="String">
-                <value>D:\Heal\Projects\SPI-AOI\Calibrate\dis.txt</value>
+                <value>..\..\..\..\Calibrate\dis.txt</value>
             </setting>
             <setting name="IMAGE_SIZE" serializeAs="String">
                 <value>2448, 2048</value>
