--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.vshost.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.vshost.exe.config
@@ -11,7 +11,7 @@
     <userSettings>
         <SPI_AOI.Properties.Settings>
             <setting name="DPI_DEFAULT" serializeAs="String">
-                <value>790</value>
+                <value>783</value>
             </setting>
             <setting name="FOV" serializeAs="String">
                 <value>1400, 1200</value>
@@ -77,22 +77,19 @@
                 <value>M3</value>
             </setting>
             <setting name="PLC_BIT_MACHINE_STATUS" serializeAs="String">
-                <value />
+                <value>M163</value>
             </setting>
             <setting name="PLC_BIT_HAS_PRODUCT_BOT" serializeAs="String">
                 <value>M105</value>
             </setting>
-            <setting name="PLC_BIT_CONTROL_RUN" serializeAs="String">
-                <value />
-            </setting>
             <setting name="PLC_BIT_READ_QRCODE_FAIL" serializeAs="String">
-                <value />
+                <value>M502</value>
             </setting>
             <setting name="PLC_BIT_CAPTURE_FAIL" serializeAs="String">
-                <value />
+                <value>M500</value>
             </setting>
             <setting name="LIGHT_COM" serializeAs="String">
-                <value>COM4</value>
+                <value>COM5</value>
             </setting>
             <setting name="PLC_BIT_GO_UP_BOT" serializeAs="String">
                 <value>M321</value>
@@ -134,7 +131,7 @@
                 <value>M110</value>
             </setting>
             <setting name="SCANER_COM" serializeAs="String">
-                <value>COM3</value>
+                <value>COM6</value>
             </setting>
             <setting name="PLC_REG_PASSWORD" serializeAs="String">
                 <value>D0</value>
@@ -160,7 +157,7 @@
                 <value>M120</value>
             </setting>
             <setting name="RUNNING_MODE" serializeAs="String">
-                <value>TEST</value>
+                <value>1</value>
             </setting>
             <setting name="PLC_REG_CONVEYOR_READ" serializeAs="String">
                 <value>D1010</value>
@@ -193,16 +190,16 @@
                 <value>D1016</value>
             </setting>
             <setting name="LIGHT_DEFAULT_INTENSITY_CH1" serializeAs="String">
-                <value>0</value>
+                <value>255</value>
             </setting>
             <setting name="LIGHT_DEFAULT_INTENSITY_CH2" serializeAs="String">
-                <value>0</value>
+                <value>160</value>
             </setting>
             <setting name="LIGHT_DEFAULT_INTENSITY_CH3" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="LIGHT_DEFAULT_INTENSITY_CH4" serializeAs="String">
-                <value>0</value>
+                <value>60</value>
             </setting>
             <setting name="USER_LOGIN" serializeAs="String">
                 <value>Admin</value>
@@ -214,22 +211,22 @@
                 <value>1.2</value>
             </setting>
             <setting name="PULSE_X_PER_PIXEL_DEFAULT" serializeAs="String">
-                <value>3.232285714</value>
+                <value>3.412917271</value>
             </setting>
             <setting name="PULSE_Y_PER_PIXEL_DEFAULT" serializeAs="String">
-                <value>3.234964286</value>
+                <value>3.237371889</value>
             </setting>
             <setting name="SCALE_PULSE_X" serializeAs="String">
-                <value>0.0002</value>
+                <value>0.015214561</value>
             </setting>
             <setting name="SCALE_PULSE_Y" serializeAs="String">
-                <value>0.0002</value>
+                <value>0.015214561</value>
             </setting>
             <setting name="CAMERA_X_AXIS_ANGLE" serializeAs="String">
                 <value>0.45011422</value>
             </setting>
             <setting name="XY_AXIS_ANGLE" serializeAs="String">
-                <value>0.0200535228295788</value>
+                <value>0</value>
             </setting>
             <setting name="PLC_LIMIT_X_TOP" serializeAs="String">
                 <value>40100</value>
@@ -254,6 +251,42 @@
             </setting>
             <setting name="PLC_REG_PENAL_POSITION" serializeAs="String">
                 <value>D292</value>
+            </setting>
+            <setting name="CAMERA_MATRIX_FILE" serializeAs="String">
+                <value>..\..\..\..\Calibrate\matrix.txt</value>
+            </setting>
+            <setting name="CAMERA_DISTCOEFFS_FILE" serializeAs="String">
+                <value>..\..\..\..\Calibrate\dis.txt</value>
+            </setting>
+            <setting name="IMAGE_SIZE" serializeAs="String">
+                <value>2448, 2048</value>
+            </setting>
+            <setting name="SAVE_IMAGE_PATH" serializeAs="String">
+                <value>D:\Save</value>
+            </setting>
+            <setting name="SAVE_IMAGE_HOURS" serializeAs="String">
+                <value>120</value>
+            </setting>
+            <setting name="LIGHT_MODE" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="CAMERA_GAIN" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="RUN_X_TOP_SPEED" serializeAs="String">
+                <value>200000</value>
+            </setting>
+            <setting name="RUN_Y_TOP_SPEED" serializeAs="String">
+                <value>200000</value>
+            </setting>
+            <setting name="RUN_CONVEYOR_SPEED" serializeAs="String">
+                <value>30000</value>
+            </setting>
+            <setting name="RUN_Y_BOT_SPEED" serializeAs="String">
+                <value>50000</value>
+            </setting>
+            <setting name="RUN_X_BOT_SPEED" serializeAs="String">
+                <value>50000</value>
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
