--- a/SPI-AOI/SPI-AOI.csproj
+++ b/SPI-AOI/SPI-AOI.csproj
@@ -194,6 +194,12 @@
     <Compile Include="Views\MainConfigWindow\IOConfigForm.Designer.cs">
       <DependentUpon>IOConfigForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\MainConfigWindow\LightCtlForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MainConfigWindow\LightCtlForm.Designer.cs">
+      <DependentUpon>LightCtlForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainConfigWindow\PLCBitconfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -220,6 +226,12 @@
     </Compile>
     <Compile Include="Views\ModelManagement\HardwareWindow.xaml.cs">
       <DependentUpon>HardwareWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ModelManagement\HSVSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ModelManagement\HSVSelectionForm.Designer.cs">
+      <DependentUpon>HSVSelectionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\ModelManagement\NewModel.xaml.cs">
       <DependentUpon>NewModel.xaml</DependentUpon>
@@ -336,6 +348,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Views\ModelManagement\HSVSelectionForm.resx">
+      <DependentUpon>HSVSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <Resource Include="Resources\Icons\PanelPosition.jpg" />
     <Resource Include="Resources\Icons\x_red2.png" />
     <EmbeddedResource Include="Views\MainConfigWindow\AlgorithmSettings.resx">
@@ -343,6 +358,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainConfigWindow\IOConfigForm.resx">
       <DependentUpon>IOConfigForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\MainConfigWindow\LightCtlForm.resx">
+      <DependentUpon>LightCtlForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainConfigWindow\PLCBitconfigForm.resx">
       <DependentUpon>PLCBitconfigForm.cs</DependentUpon>
