--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -189,17 +189,17 @@
             <setting name="PLC_REG_Y_BOT_READ" serializeAs="String">
                 <value>D1016</value>
             </setting>
-            <setting name="LIGHT_DEFAULT_INTENSITY_CH1" serializeAs="String">
+            <setting name="LIGHT_SETUP_DEFAULT_INTENSITY_CH1" serializeAs="String">
                 <value>255</value>
             </setting>
-            <setting name="LIGHT_DEFAULT_INTENSITY_CH2" serializeAs="String">
-                <value>160</value>
+            <setting name="LIGHT_SETUP_DEFAULT_INTENSITY_CH2" serializeAs="String">
+                <value>100</value>
             </setting>
-            <setting name="LIGHT_DEFAULT_INTENSITY_CH3" serializeAs="String">
+            <setting name="LIGHT_SETUP_DEFAULT_INTENSITY_CH3" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="LIGHT_DEFAULT_INTENSITY_CH4" serializeAs="String">
-                <value>60</value>
+            <setting name="LIGHT_SETUP_DEFAULT_INTENSITY_CH4" serializeAs="String">
+                <value>65</value>
             </setting>
             <setting name="USER_LOGIN" serializeAs="String">
                 <value>Admin</value>
@@ -208,7 +208,7 @@
                 <value>3.636363636363</value>
             </setting>
             <setting name="THICKNESS_DEFAULT" serializeAs="String">
-                <value>1.2</value>
+                <value>1.65</value>
             </setting>
             <setting name="PULSE_X_PER_PIXEL_DEFAULT" serializeAs="String">
                 <value>3.412917271</value>
@@ -243,8 +243,8 @@
             <setting name="PLC_LIMIT_CONVEYOR" serializeAs="String">
                 <value>2147483</value>
             </setting>
-            <setting name="CAMERA_EXPOSURE_TIME" serializeAs="String">
-                <value>3000</value>
+            <setting name="CAMERA_SETUP_EXPOSURE_TIME" serializeAs="String">
+                <value>2000</value>
             </setting>
             <setting name="PLC_BIT_RESET_AFTER_LOGOUT" serializeAs="String">
                 <value>M2996</value>
@@ -287,6 +287,24 @@
             </setting>
             <setting name="RUN_X_BOT_SPEED" serializeAs="String">
                 <value>50000</value>
+            </setting>
+            <setting name="LIGHT_VI_DEFAULT_INTENSITY_CH1" serializeAs="String">
+                <value>255</value>
+            </setting>
+            <setting name="LIGHT_VI_DEFAULT_INTENSITY_CH2" serializeAs="String">
+                <value>75</value>
+            </setting>
+            <setting name="LIGHT_VI_DEFAULT_INTENSITY_CH3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LIGHT_VI_DEFAULT_INTENSITY_CH4" serializeAs="String">
+                <value>30</value>
+            </setting>
+            <setting name="CAMERA_VI_EXPOSURE_TIME" serializeAs="String">
+                <value>6000</value>
+            </setting>
+            <setting name="Debug" serializeAs="String">
+                <value>True</value>
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
