--- a/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
+++ b/SPI-AOI/bin/x64/Debug/SPI-AOI.exe.config
@@ -11,7 +11,7 @@
     <userSettings>
         <SPI_AOI.Properties.Settings>
             <setting name="DPI_DEFAULT" serializeAs="String">
-                <value>783</value>
+                <value>785.6</value>
             </setting>
             <setting name="FOV" serializeAs="String">
                 <value>1400, 1200</value>
@@ -211,10 +211,10 @@
                 <value>1.65</value>
             </setting>
             <setting name="PULSE_X_PER_PIXEL_DEFAULT" serializeAs="String">
-                <value>3.412917271</value>
+                <value>3.230980752</value>
             </setting>
             <setting name="PULSE_Y_PER_PIXEL_DEFAULT" serializeAs="String">
-                <value>3.237371889</value>
+                <value>3.23752057</value>
             </setting>
             <setting name="SCALE_PULSE_X" serializeAs="String">
                 <value>0.015214561</value>
@@ -302,6 +302,9 @@
             </setting>
             <setting name="CAMERA_VI_EXPOSURE_TIME" serializeAs="String">
                 <value>6000</value>
+            </setting>
+            <setting name="Debug" serializeAs="String">
+                <value>True</value>
             </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
