--- a/SPI-AOI/App.config
+++ b/SPI-AOI/App.config
@@ -306,6 +306,9 @@
             <setting name="Debug" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ServiceURL" serializeAs="String">
+                <value>http://127.0.0.1:812</value>
+            </setting>
         </SPI_AOI.Properties.Settings>
     </userSettings>
 </configuration>
