--- a/SPI-AOI/Properties/Settings.settings
+++ b/SPI-AOI/Properties/Settings.settings
@@ -296,5 +296,8 @@
     <Setting Name="Debug" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ServiceURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://127.0.0.1:812</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
